dead_probability is a single bit vector
land monitor now generates the cutting request
crop_ht removeed from cutetr queue
area+breadth ---dispense queue
tilling and len removed from dispenser queue
remove water request output from dispenser queue